corrected weird aqua border to be black, changed all black backgrounds to white, except on loader then adjust whole screen to be black. Centered the loading text to appear more logical.

--- a/client/containers/projects/project_style.css
+++ b/client/containers/projects/project_style.css
@@ -10,7 +10,7 @@
 }
 .loaderContainerTwo {
   min-height:800px;
-  background-color: black;
+  background-color: white;
 }
 .loaderImageTwo {
   position: absolute;
