--- a/client/components/Card/issueCards.css
+++ b/client/components/Card/issueCards.css
@@ -1,8 +1,9 @@
 .mainCont {
+  margin-top: 3%;  
   display:flex;
   flex-wrap:wrap;
   /*justify-content: space-evenly;*/
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 
 }
 .boxShad {
