--- a/client/components/EventFeed/card_styles.css
+++ b/client/components/EventFeed/card_styles.css
@@ -1,4 +1,7 @@
-
+.event-feed {
+  height:100%;
+  background-color:white;
+}
 .card {
   width:70%;
   margin-left: 15%;
@@ -10,7 +13,7 @@
   min-height: 25px;
   margin-bottom: 8px;
   padding:10px;
-  border-color: aqua;
+  border-color: black;
   border-style: solid;
   border-width: 3px;
   border-radius: 8px;
@@ -26,9 +29,9 @@
   margin-bottom: 10px;
   text-align: center;
 }
-.eventBuffer {
+/* .eventBuffer {
   margin-bottom: 10%;
-}
+} */
 .displayMore {
   border: aqua solid 2px;
   margin-bottom: 100px;
@@ -38,8 +41,11 @@
 .loaderContainer {
   min-height:800px;
   background-color: black;
+  height:100vh;
+  width:100vw;
 }
 .loaderImage {
+
   position: absolute;
     top:0;
     bottom: 0;
@@ -48,10 +54,15 @@
     margin: auto;
 }
 .loaderText {
-  text-align: center;
+  position: absolute;
+    top:40%;
+    bottom: 0;
+    left: 47%;
+    right: 0%;
+    margin: auto;
 }
 .refreshButt {
-  border: aqua solid 2px;
+  border: black solid 2px;
   width:50px;
   margin-top: 5px;
   margin-left: 48%;
