--- a/client/components/Matrix/matrix.css
+++ b/client/components/Matrix/matrix.css
@@ -1,4 +1,5 @@
 .container {
+  margin-top: 3%;
   color: #333;
   display: grid;
   height: 70vh;
@@ -7,7 +8,7 @@
   grid-template-rows: repeat(2, 1fr);
   grid-template-areas:
     "q1 q2"
-    "q3 q4"; 
+    "q3 q4";
 }
 
 .checkBox {
