--- a/client/components/EventFeed/card_styles.css
+++ b/client/components/EventFeed/card_styles.css
@@ -39,6 +39,7 @@
 } */
 .displayMore {
   border: black solid 2px;
+  background:lightgray;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5%;
   margin-bottom: 100px;
@@ -73,10 +74,12 @@
     margin: auto;
 }
 .refreshButt {
+  display:flex;
+  background:lightgray;
+  justify-content: center;
   border: black solid 2px  ;
   box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.5);
   border-radius: 5%;
   margin-top: 2%;
-  width:8%;
   cursor: pointer;
 }
