modified buttons to have a selected state, and disabled the button in that state.  Added in a drop shadow to buttons

--- a/client/components/ButtonBar/button_styles.css
+++ b/client/components/ButtonBar/button_styles.css
@@ -2,7 +2,11 @@
   width:20%;
   margin:2.5%;
   background-color: white;
+  border:3px solid transparent;
+  box-shadow: 3px 3px rgba(0,0,0, 0.3);
 }
-.buttonChoice:hover {
-  background-color: red;
+.selected {
+  background: darkslateblue;
+  border: 3px solid black;
 }
+
