--- a/client/components/NavBar/NavBar.css
+++ b/client/components/NavBar/NavBar.css
@@ -1,20 +1,17 @@
 .button {
-
   width: 90%;
   margin-bottom: 2px;
   margin-top: 3%;
   margin-bottom: 3%;
-  /*padding-right: 2%;*/
   margin-left: 5%;
   margin-right: 5%;
-
 }
-
+header[data-react-toolbox=app-bar] {
+  background:black;
+}
 .repoButton {
   color: #f00;
-  background-color: #59ffd8;
-
-
+  background-color: darkslateblue;
 }
 .navMargin {
   margin-left: 61%;
@@ -27,7 +24,6 @@
 }
 .pageButtons {
   display:flex;
-  /*margin-left: 3%;*/
   margin-top: 3%;
   margin-bottom: 3%;
 }
