--- a/client/containers/projects/project_style.css
+++ b/client/containers/projects/project_style.css
@@ -3,10 +3,10 @@
   background-color: lightgray;
 }
 .layout {
-  /*width:100%;*/
+  background:white;
   min-height: 500px;
-  margin-left: 2%;
-  margin-right: 2%;
+  padding:2%;
+  padding-bottom: 10%;
 }
 .collab {
   display:flex;
@@ -15,8 +15,9 @@
 }
 
 .loaderContainerTwo {
-  min-height:800px;
-  background-color: white;
+  width:100vw;
+  height:100vh;
+  background-color: black;
 }
 .loaderImageTwo {
   position: absolute;
