--- a/client/components/ButtonBar/button_styles.css
+++ b/client/components/ButtonBar/button_styles.css
@@ -1,6 +1,6 @@
 .buttonChoice {
   width:20%;
-  margin:2.5%;
+  margin-bottom:2.5%;
   background-color: white;
   border:3px solid transparent;
   box-shadow: 3px 3px rgba(0,0,0, 0.3);
@@ -8,5 +8,9 @@
 .selected {
   background: darkslateblue;
   border: 3px solid black;
+}
+.buttonContainer {
+  display:flex;
+  justify-content: space-evenly;
 }
 
