--- a/client/components/NavBar/NavBar.css
+++ b/client/components/NavBar/NavBar.css
@@ -1,10 +1,11 @@
 .button {
-  width: 90%;
-  margin-bottom: 2px;
-  margin-top: 3%;
+  width: 70%;
+  margin-top:3%;
   margin-bottom: 3%;
-  margin-left: 5%;
-  margin-right: 5%;
+}
+.buttonContainer {
+  display:flex;
+  justify-content: center;
 }
 header[data-react-toolbox=app-bar] {
   background:black;
